correção no footer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
     </section>
     <footer>
-        <p> &copy; Creat by Thamiris</p>
+        <p> &copy; Create by Thamiris</p>
     </footer>
     <script src="index.js"></script>
 </body>
